# typegenerator

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  setup.py
src/type_gen_dict/: generator.py
src/typegenerator/: __init__.py  generator.py
